feat: device commands
